test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values/src/cfg_attr_target.sw
library;

#[cfg(target = "efm")]
pub fn not_ok() {}